--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <dependency>
             <groupId>net.openhft</groupId>
             <artifactId>chronicle-core</artifactId>
+            <version>1.9.6-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -211,6 +212,7 @@
                 <maven.compiler.source>1.9</maven.compiler.source>
                 <maven.compiler.target>1.9</maven.compiler.target>
                 <maven.compiler.fork>true</maven.compiler.fork>
+                <maven.javadoc.skip>true</maven.javadoc.skip>
                 <compiler.argument>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.unsupported/sun.misc=ALL-UNNAMED</compiler.argument>
             </properties>
         </profile>
